# safespace

./: .gitignore  README.md  index.html  mkdocs.yml
.github/workflows/: deploy-pages.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: digital-twin-implementation.md
assets/: index-BFzXZUq2.js  index-jrlBZ-MQ.css
backend/: pyproject.toml
backend/app/: main.py  main_state.py
backend/app/core/: config.py  db.py  websocket.py
backend/app/demo/: api.py  schema.py  service.py
backend/app/event/: api.py  repository.py  schema.py  service.py
backend/app/risk/: rules.py  schema.py  service.py
backend/app/sensor/: api.py  repository.py  schema.py  service.py
backend/app/storage/: models.py
backend/app/worker/: api.py  schema.py  service.py
backend/app/zone/: api.py  schema.py  service.py
docs/: 404.html  api.md  architecture.md  backend.md  data.md  demo.md  deployment.md  digital-twin.md  frontend.md  getting-started.md  index.html  index.md  prd.md  presentation.md  risk-rules.md  roadmap.md  sitemap.xml  tech.md  ux-ui.md
docs/api/: index.html
docs/architecture/: index.html
docs/backend/: index.html
docs/data/: index.html
docs/demo/: index.html
docs/deployment/: index.html
docs/frontend/: index.html
docs/getting-started/: index.html
docs/prd/: index.html
docs/presentation/: index.html
docs/risk-rules/: index.html
docs/roadmap/: index.html
docs/search/: search_index.json
docs/tech/: index.html
docs/ux-ui/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
(+50 files in other folders)
