[project]
name = "safespace-backend"
version = "0.1.0"
description = "SafeSpace backend - confined space safety monitoring"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.0",
    "websockets>=13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "httpx"]

[tool.ruff]
line-length = 100
target-version = "py311"
